--- a/makeNewick.Rmd
+++ b/makeNewick.Rmd
@@ -1,37 +1,33 @@
 ---
 title: "newick_maker"
 output: html_document
-date: "2024-12-02"
+date: "2024-12-05"
 ---
 ```{r}
 library(taxonomizr)
 ```
-
 Get SQL files
 ```{r}
-ids <- c("5076", "5077", "446515", "5061", "5059", "33178", "29001", "570640", "652027", "119955", "74413", "318706", "115983", "121624", "55181", "121619", "469762", "5297", "27344", "552628")
+prepareDatabase(getAccessions = FALSE)
 ```
-
+Get taxonomy for our species of choice
 ```{r}
-ids <- c("5076", "5077", "446515", "5061", "5059", "33178", "29001", "570640", "652027", "119955", "74413", "318706", "115983", "121624", "55181", "121619", "469762", "5297", "27344", "552628")
+ids <- c("5076", "5077", "446515", "5061", "5059", "33178", "29001", "570640", "652027", "119955", "74413", "318706", "115983", "121624", "55181", "121619", "469762", "5297", "27344", "552628", "658196")
+
+taxa <- getTaxonomy(ids,
+            sqlFile = "nameNode.sqlite",
+            desiredTaxa = c("superkingdom", "phylum", "class", "order", "family", "genus", "species"))
 ```
 
-## R Markdown
+Create newick file
+```{r}
+output <- makeNewick(
+	taxa,
+	naSub = "_",
+	excludeTerminalNAs = FALSE,
+	quote = NULL,
+	terminator = ";"
+	)
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+cat(output, file = "JGItree.nwk")
 ```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
