finished GRF calculations

--- a/rf_distances.ipynb
+++ b/rf_distances.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "b92b02f2-5d70-4ecb-8151-a0cdb0750272",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "c57f8388-43aa-4c1c-9e8d-ee16b9f5af30",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "3f6098bb-596c-4c7c-be5c-fcec8237b1d3",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
        "0.5555555555555556"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,17 +69,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "2b05a5b0-715a-4ee1-9957-cd449e0478d2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7037037037037037"
+       "0.391304347826087"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,12 +88,12 @@
     "aim2_comp = find_rf(jgi, aim2)\n",
     "aim2_comp[0]\n",
     "\n",
-    "# Normalized RF for JGI & Aim 2: 0.70"
+    "# Normalized RF for JGI & Aim 2: 0.39"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "d10a5a71-f5df-4a58-8104-ecb6aa87ff1d",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
        "0.5833333333333334"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,11 +117,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1b180ee6-e045-437e-bc18-74b8268178de",
+   "execution_count": 7,
+   "id": "a66b1645-15b5-49eb-a546-6fbe171b6a55",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4375"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aim1_aim3 = find_rf(aim1, aim3)\n",
+    "aim1_aim3[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "45b6bad9-acc6-414f-8b10-51f841eeaa10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.625"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aim1_aim2 = find_rf(aim1, aim2)\n",
+    "aim1_aim2[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9f127f3d-f8f6-4afb-ad06-6e82ac80c110",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5862068965517241"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aim2_aim3 = find_rf(aim2, aim3)\n",
+    "aim2_aim3[0]"
+   ]
   }
  ],
  "metadata": {
