fixed aim 2 scores

--- a/treeDistances.Rmd
+++ b/treeDistances.Rmd
@@ -15,8 +15,8 @@ setwd("/Users/ekim/Desktop/compbio-project/trees")
 jgi <- read.tree("JGItree.nwk")
 
 aim1 <- read.tree("aim1.nwk")
-aim2_all <- read.tree("aim2_all.nhx")
-aim2_jgi <- read.tree("aim2_jgi.nwk")
+aim2_all <- read.tree("all_samples.nhx")
+aim2_jgi <- read.tree("jgi_backbone_aim2.nwk")
 a3_10_9 <- read.tree("sample_20_comb0.10.9seqstr_tree.txt")
 a3_20_8 <- read.tree("sample_20_comb0.20.8seqstr_tree.txt")
 a3_30_7 <- read.tree("sample_20_comb0.30.7seqstr_tree.txt")
